--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -32,3 +32,8 @@ scrape_configs:
     static_configs:
       - targets:
         - localhost:8000
+  - job_name: pushgateway
+    honor_labels: true
+    static_configs:
+     - targets:
+       - localhost:9091
